fill in the blanks in the docs and add corrections.